--- a/src/routes/Game/Game.css
+++ b/src/routes/Game/Game.css
@@ -40,6 +40,7 @@ h3 {
   -webkit-backdrop-filter: blur(5px);
   backdrop-filter: blur(5px);
   font-size: 18px;
+  white-space: nowrap;
 }
 
 .pause {
